--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "test": "jest tests/*.test.js",
+    "dev": "nodemon app.js",
+    "start": "app.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "nodemailer": "^6.9.7"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2"
   }
 }
