--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "dotenv": "^16.3.1",
+    "luxon": "^3.4.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "mqtt": "^5.3.3",
