--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest tests/*.test.js",
     "dev": "nodemon app.js",
-    "start": "app.js"
+    "start": " node app.js"
   },
   "keywords": [],
   "author": "",
